# gswarm

./: .gitignore  .gitmodules  CLAUDE.md  README.md  README_gsmodel.md  path=README.md  path=pyproject.toml  plot.py  pyproject.toml  test_cli_command.py  test_enhanced_features.py  test_startup_fix.py
.github/workflows/: publish-to-pypi.yml  publish_to_pypi.yml
.gswarm_model_data/: registry.json
docs/: Client-API-Reference.md  Model-Storage-design.md  README.md
docs/api-reference/: Data-API-Reference.md  README.md
docs/architecture/: README.md
docs/getting-started/: README.md
docs/guides/: README.md
docs/troubleshooting/: README.md
examples/: README.md  comfyui_batch_converter.py  comfyui_to_config.py  data_api_example.py  kv_storage_example.py  model_management_example.py
examples/comfyui-test/: README.md  comfyui_to_config.py
examples/comfyui-test/configs/: CRM_Comfy_3D.json  CosXL_Edit_ArtGallery_1.0.json  FLUX.1_DEV_1.0.json  FLUX.1_SCHNELL_1.0.json  HUNYUAN_VIDEO_1.0.json  LivePortrait_Animals_1.0.json  SD3_BASE_1.0.json  SD3_Medium_Qwen2.json  SD3_Medium_肖像大师中文版.json  SD3是否内置文本编码器的对比.json  SDXS-512-0.9.json  Sketch_to_3D.json  Stable_Cascade_Canny_ControlNet.json  Stable_Cascade_ImagePrompt_Mix.json  Stable_Cascade_ImagePrompt_Standard.json  Stable_Cascade_Img2Img.json  Stable_Cascade_Inpainting_ControlNet.json
examples/ocr-test/: paddle_ocr_config.json
gswarm_profiler/: __main__.py  cli.py  client.py  head.py  stat.py
path=docs/: Migration-Guide.md
src/gswarm/: __init__.py  __main__.py  cli.py  client_resilient.py
src/gswarm-standalone-scheduler/: README.md
src/gswarm-standalone-scheduler/scheduler_dev_input_demo/: README.md  README_Batch_Converter.md  README_ComfyUI_Converter.md  comfyui_to_config.py  demo_batch_converter.py  demo_converter.py  fix.py  flux_config.json  model_seq_gen.py  test_complex_multimodal.json  test_config.json  test_converter.py  test_individual_configs.py  test_minimal.json
src/gswarm-standalone-scheduler/scheduler_test_v0/: standalone_offline.py
src/gswarm-standalone-scheduler/scheduler_test_v1/: .gitignore  OFFLINE_README.md  ONLINE_README.md  __init__.py  baseline.py  compare_all_schedulers.py  compare_schedulers.py  complex_config_h20.json  generate_final_report.py  offline_scheduler.py  online_scheduler.py  static_scheduler.py  test_balanced_scheduler.py
src/gswarm-standalone-scheduler/scheduler_test_v2/: FINAL_SUMMARY.md  PD_Strategy_Report.md  README.md  SGLANG_GUIDE.md  SGLANG_SETUP_GUIDE.md  SUMMARY.md  benchmark_pd_inference.py  check_sglang_args.py  demo_pd_separation.py  install_sglang.sh  llm_pd_server.py  llm_pd_server_lite.py  longbench2_pd_test.py  minimal_pd_experiment.py  minimal_sglang_test.py  pd_separation_simulation.py  quick_demo.py  quick_pd_analysis.py  quick_pd_test.py  real_pd_experimental_results_20250709_154443.json  run_test.sh  sglang_pd_demo_final.py  sglang_pd_demo_phi2_fixed.py  sglang_pd_demo_working.py  sglang_pd_minimal_demo.py  sglang_pd_multigpu_demo.py  sglang_pd_server.py  sglang_runtime_demo.py  sglang_simple_demo.py  sglang_v0.4_demo.py  simple_pd_demo.py  simple_sglang_test.py  standalone_demo.sh  test_sglang_basic.py  test_sglang_basic_fixed.py  test_sglang_cpu.py  test_sglang_manual.sh  test_with_small_model.sh
src/gswarm-standalone-scheduler/standalone_model_server/: README.md  cost.py  example_multi_replica_load_test.py  sd_cost_model.py
src/gswarm-standalone-sheduler/: curl_examples.sh  experiment_results.json  experiment_summary.json  model_seq_gen.py  standalone_model.py  standalone_offline.py  standalone_offline_example.py  standalone_online.py  workflow_requests.json  workflow_requests.yaml
src/gswarm-standalone-sheduler/scheduler_test_v1/: check.py  (+35 more)
src/gswarm_model/: __init__.py  __main__.py  cli.py  client.py  generate_grpc.py  head.py  http_api.py  model_pb2.py  model_pb2_grpc.py
src/gswarm_profiler/: cli.py  client.py  client_grpc.py  client_resilient.py  fix_imports.py  generate_grpc.py  head.py  head_grpc.py  head_resilient.py  http_api.py  persistence.py  profiler.proto  profiler_pb2.py  profiler_pb2_grpc.py  session_manager.py  stat.py  utils.py
(+79 files in other folders)
