[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gswarm-profiler"
version = "0.1.0"
description = "Multi-node multi-GPU profiler"
authors = [
    {name = "Chivier Humber", email = "chivier.humber@outlook.com"},
    {name = "Anyin", email = "shizukuprprpr@gmail.com"},
]

requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "nvitop>=1.3.0",
    "loguru>=0.7.0",
    "aiofiles>=23.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]

[project.scripts]
gsprof = "gswarm_profiler.cli:app"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401", "I001"]

[dependency-groups]
dev = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
]
